tests/NormalTests/paczka1/fuzzy1/54487625.err
Error in line 8: VjE S267 19,4
Error in line 5: A353 A956 83,7
Error in line 17: A353 S991 %9,7
Error in line 20: HTudBS S991 34,2
Error in line 22: VjE S991 59,9
Error in line 12: RL2v S267 18,5
Error in line 35: SNH8K S267 164,51
